--- a/src/pages/PhraseGame.css
+++ b/src/pages/PhraseGame.css
@@ -1,6 +1,50 @@
-.bankbtn{
+
+.main {
+    background-color: rgb(244, 248, 249);
+    display: flex;
+    justify-content: center;
+}
+.bankbtn{margin-top: 1em;
     margin-bottom: .5em;
+    display: inline-flex;
+    justify-content: center;
 }
-.level{
+.level{ 
     margin: 2em;
+    justify-content: center;
 }
+.wordBank{
+    max-width: 60%;
+    display: inline-block;
+    justify-content: center;
+    background-color: rgb(225, 250, 250);
+    border: 1px solid gray;
+    border-radius: 5px;
+}
+.wordBank h3 {
+    margin-top: .5em;
+    display: flex;
+    justify-content: center;
+}
+.answersholder{ 
+    margin-top: 1.5em;
+    max-width: 30%;
+    background-color: rgb(225, 250, 250);
+    border: 1px solid gray;
+    border-radius: 5px;
+
+}
+.answersholder p{
+    margin-top: .5em;
+    margin-bottom: 1px;}
+.row{
+    
+    margin-left: 1em;
+border-bottom: 1px solid gray;
+max-width: 95%;
+    object-fit: contain;
+}
+.btn{ background-color: aqua;
+    color: black;}
+    
+    
