--- a/src/pages/VerbMatchGame.css
+++ b/src/pages/VerbMatchGame.css
@@ -1,14 +1,49 @@
-.photodiv{
+.verbMatch{
+    margin-top: 4em;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.picturesBox{ display: flex;
    height: auto;
    width: fit-content;
-    border: 1px solid gray;
+    flex-wrap: wrap;
 }
-.photo{
-    width:300px;
+.verbsBox{
     height: auto;
+    width: 30%;
+border: 2px solid black;
+display: flex;
+justify-content: center;
+gap: 2%;
+align-items: flex-end;
+flex-wrap: wrap;
+
+
+
 }
-.draggable{
+
+.picDiv{
+    width:250px;
+    height: auto;
+    margin-left: .75em;
+    margin-right: .75em;
+    margin-top: .75em;
+    margin-bottom: .75em;
+}
+.singleVerb{
+    height: 2em;
     border: 1px solid gray;
     background-color: aqua;
+    color: black;
     width: fit-content;
-cursor: move}
+cursor: move;
+margin-bottom: .5em;
+margin-top: .5em;}
+.innerPic {
+    max-width: 100%;
+    object-fit: contain;
+}
